--- a/public/style.css
+++ b/public/style.css
@@ -2,18 +2,20 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 20px;
-    background: linear-gradient(to bottom, #4a90e2, #d8e8ff);
+    background: url('https://i.postimg.cc/Hs0LDLzV/cool-background.png'), 
+                linear-gradient(to bottom, #4a90e2, #d8e8ff);
+    background-size: cover;
+    background-position: center;
     color: #333333;
     text-align: center;
 }
-
 h1 {
     font-size: 40px;
-    color: #0044cc;
+    color: #D35400;
     text-transform: uppercase;
     letter-spacing: 2px;
     text-shadow: 1px 1px black;
-    margin-bottom: 80px;
+    margin-bottom: 50px;
 }
 
 .container {
@@ -22,7 +24,7 @@ h1 {
     align-items: flex-start;
     gap: 30px; 
     margin: 0 auto;
-    margin-bottom: 50px;
+    margin-bottom: 80px;
     max-width: 1200px;
 }
 
@@ -32,7 +34,7 @@ h1 {
     min-height: 500px; 
     padding: 20px;
     border-radius: 10px;
-    background: #ffffff;
+    background: #dee1e4;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     display: flex;
@@ -42,7 +44,7 @@ h1 {
 
 .fact-section h2 {
     font-size: 24px;
-    color: #0044cc;
+    color: #D35400;
     font-weight: bold;
     margin-bottom: 10px;
 }
@@ -69,7 +71,7 @@ h1 {
 }
 
 button {
-    background: #0078d4;
+    background: #D35400;
     color: white;
     border: none;
     padding: 10px 15px;
@@ -84,7 +86,7 @@ button {
 }
 
 button:hover {
-    background: #005bb5;
+    background: #A04000;
 }
 
 @media (max-width: 1024px) {
