--- a/public/style.css
+++ b/public/style.css
@@ -28,14 +28,14 @@ h1 {
     max-width: 1200px;
 }
 
-
 .fact-section {
     width: 500px;
-    min-height: 500px; 
+    height: 500px; 
     padding: 20px;
     border-radius: 10px;
-    background: #dee1e4;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    background: rgba(255, 165, 0, 0.15); 
+    backdrop-filter: blur(12px);
+    box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.6);
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -46,7 +46,7 @@ h1 {
     font-size: 24px;
     color: #D35400;
     font-weight: bold;
-    margin-bottom: 10px;
+    text-shadow: 1px 1px black;
 }
 
 .fact-section p {
@@ -57,13 +57,15 @@ h1 {
     background-color: #f8f8f8;
     box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.1), inset -2px -2px 5px rgba(255, 255, 255, 0.6);
     width: 80%;
+    margin: 0;
+    margin-bottom: 20px;
 }
 
 
 .fact-image {
-    width: 250px;
-    height: 200px;  
-    object-fit: cover; 
+    width: 300px;
+    height: 250px;  
+    object-fit: fit; 
     margin-top: 10px;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
