--- a/public/style.css
+++ b/public/style.css
@@ -29,8 +29,8 @@ h1 {
 }
 
 .fact-section {
-    width: 500px;
-    height: 500px; 
+    width: 600px;
+    height: 600px; 
     padding: 20px;
     border-radius: 10px;
     background: rgba(255, 165, 0, 0.15); 
@@ -40,22 +40,23 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .fact-section h2 {
     font-size: 24px;
-    color: #D35400;
+    color: #ad4500;
     font-weight: bold;
-    text-shadow: 1px 1px black;
+    text-shadow: 0.5px 0.5px black;
 }
 
 .fact-section p {
     font-size: 18px;
-    color: #555555;
+    color: #090909;
     padding: 10px;
     border-radius: 5px;
-    background-color: #f8f8f8;
-    box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.1), inset -2px -2px 5px rgba(255, 255, 255, 0.6);
+    background-color: transparent;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.6);
     width: 80%;
     margin: 0;
     margin-bottom: 20px;
