--- a/public/style.css
+++ b/public/style.css
@@ -30,7 +30,7 @@ h1 {
 
 .fact-section {
     width: 600px;
-    height: 500px; 
+    height: 550px; 
     padding: 20px;
     border-radius: 10px;
     background: rgba(255, 165, 0, 0.15); 
@@ -44,14 +44,17 @@ h1 {
 }
 
 .fact-section h2 {
-    font-size: 24px;
-    color: #ad4500;
+    font-size: 22px;
+    color: #D35400; 
     font-weight: bold;
-    text-shadow: 0.5px 0.5px black;
+    text-shadow: 1px 1px 2px rgba(178, 171, 171, 0.5), 
+                 0px 0px 8px rgba(220, 188, 188, 0.576); 
 }
 
+
+
 .fact-section p {
-    font-size: 18px;
+    font-size: 16px;
     color: #090909;
     padding: 10px;
     border-radius: 5px;
