--- a/public/style.css
+++ b/public/style.css
@@ -51,7 +51,10 @@ h1 {
                  0px 0px 8px rgba(220, 188, 188, 0.576); 
 }
 
-
+h2.randomFact {
+    text-shadow: 1px 1px 2px rgba(1, 1, 1, 0.5), 
+                 0px 0px 3px rgba(22, 22, 22, 0.576); 
+}
 
 .fact-section p {
     font-size: 16px;
@@ -107,7 +110,7 @@ button:hover {
 
     .fact-section {
         width: 90%;
-        height: auto; /* Make it adjust dynamically */
+        height: auto; 
         padding: 20px;
     }
 
